styles.scss
/*-- scss:defaults --*/

// Import fonts
@import url('https://fonts.googleapis.com/css2?family=Sen:wght@400;700;800&display=swap'); // Sen is similar to Avenir? Imported Regular, Bold, Extra Bold -- can only specify font weights that exist in this Google font set and are imported here; Sen is applied as the main website font in `_quarto.yml`

// Colors (define Sass color variables here; syntax = `$varName: value;`)
$white: #FFFFFF;
$light-gray1: #EEEEEE; 
$light-gray2: #DBDBDA; 
$medium-gray1: #999999;
$medium-gray2: #555555; 
$dark-gray: #333333; 
$blue: #38A7BB;
$light-blue: #53C9DF;
$light-yellow: #FFF6E1;

// Base document colors (find more Quarto Sass vars here: https://quarto.org/docs/output-formats/html-themes.html#sass-variables)
$navbar-bg: $white;
$navbar-fg: $dark-gray; 
$navbar-hl: $dark-gray; 
$body-bg: $white;
$body-color: $dark-gray;
$footer-bg: $medium-gray2; 
$link-color: $blue;

/*-- scss:rules --*/

//////////// Element selectors ////////////

body { // set body text size & line height
  line-height: 1.5; // min 1.5 suggested for assistive tech
  font-size: 17px;
}

blockquote { // style blockquotes
  background: $white;
  border-left: 3px solid $blue;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
}

blockquote p { // align blockquotes
  display: inline-block;
}

.blockquote-gray { // style gray blockquotes (used inside light-gray-div)
  border-left: 3px solid $blue;
  border-left: 3px solid $blue;
  margin: 1.5em 10px;
  padding: 0.5em 10px;
  background-color: $light-gray2;
}

//////////// Class selectors (identified by "Inspect"ing the site) ////////////

// navbar hover color
.navbar-dark .navbar-nav .show>.nav-link, .navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active {
    background-color: $light-blue;
}

// openscapes logo size/position (navbar top left); see https://github.com/robertmitchellv/robertmitchellv.github.io/blob/main/custom-dark.scss
.navbar-brand img { 
  max-height: 70px; // was 200px when using alt logo (from blogdown site)
  width: auto;
  padding-left: 20px;
}

.card { // udpate blog listing card color on landing page
  background-color: $light-gray1;
}

//////////// Class selectors (self-defined) ////////////

.blue-underline { // see https://stackoverflow.com/questions/1734618/how-to-increase-the-gap-between-text-and-underlining-in-css
  text-decoration: underline $blue;
  text-underline-offset: 10px; // https://developer.mozilla.org/en-US/docs/Web/CSS/text-underline-offset
  text-decoration-thickness: 4px;
}

.large-body-text { // large-sized text
  font-size: 50px;
}

.medium-body-text { // medium-sized text
  font-size: 25px;
}

.small-body-text { // small-sized text
  font-size: 15px;
}

.stat-text { // stat box (landing page) text
  font-size: 20px;
}

.caption-text { // styled image caption text
  font-size: 15px;
  color: $medium-gray2;
}

.blue-text { // blue text
  color: $blue;
}

.medium-gray1-text{ // gray text
  color: $medium-gray1;
}

.center-text { // center text
  text-align: center;
}

.white-div { // used to create white div 
  background-color: $white;
  max-width: 100%;
  height: auto;
  width: auto;
  padding-top: 1%;//5px;
  padding-bottom: 1%;//15px;
  padding-right: 10%; //160px;
  padding-left: 10%; //160px;
}

.light-gray-div { // used to create light gray div on landing page
  background-color: $light-gray2;
  max-width: 100%;
  height: auto;
  width: auto;
  padding-top: 1%;//15px;
  padding-bottom: 1%;//15px;
  padding-right: 10%; //160px;
  padding-left: 10%; //160px;
}

.stat-box { // used to create stat boxes on landing page
  width: 300px;
  background-color: $light-gray1;
  border: 6px solid $blue;
  padding: 15px;
  margin: 20%;//10px;
}

.yellow-bg { // yellow background color 
  background-color: $light-yellow;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 5px;
  padding-left: 8px;
  border-radius: 15px;
}

/*.container { // create flexbox container (https://www.youtube.com/watch?v=phWxA89Dy94)
  display: flex;
  flex-direction: row; // default
  justify-content: space-around; //center, space-between
}*/

